Fixed Navbar overflow bug, Update padding to form

--- a/css/agency.css
+++ b/css/agency.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   overflow-x: hidden;
   font-family: 'Roboto Slab', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
@@ -102,6 +102,7 @@ img::-moz-selection {
 
 #mainNav {
   background-color: #4B9CD3;
+  padding: 0.5rem;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -138,6 +139,12 @@ img::-moz-selection {
 
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
   color: #000;
+}
+
+@media (max-width: 360px) {
+  #mainNav .navbar-brand img {
+    max-height: 2rem;
+  }
 }
 
 @media (min-width: 992px) {
