--- a/scss/base/_page.scss
+++ b/scss/base/_page.scss
@@ -1,5 +1,5 @@
 // Global styling for this template
-body {
+html, body {
   overflow-x: hidden;
   @include body-font;
 }
